Fix for code snippets overflowing their parent

--- a/_sass/components/_code-highlighting.scss
+++ b/_sass/components/_code-highlighting.scss
@@ -2,7 +2,7 @@
     background: #272822;
     border-radius: 5px;
     color: #f8f8f2;
-    margin-bottom: 24px;
+    margin: 24px;
     padding: 24px;
 
     pre {
